--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -10,13 +10,4 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - uses: actions/cache@v2
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: ${{ runner.os }}-node-
-
-    - run: npm install
-
-    - run: npm test
+    - run: echo "hello"
